--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,7 +5,7 @@
     <div class="row g-5 mb-5">
       <div class="col-md-6">
         <h4>{{ contact.name }}</h4>
-        <p>{{ contact.title }} | {{ contact.department }}</p>
+        <p>{{ contact.department }}
         <p>{{ contact.institution }} 
         <p>Email: {{ contact.email }}</p>
       </div>
