Update work layout with new sections and data sources

--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -6,13 +6,13 @@ layout: default
 
 <div class="row g-5 mb-5">
   <div>
-    <h3 class="fw-bold border-bottom pb-3 mb-5">CV</h3>
+    <h3 class="fw-bold border-bottom pb-3 mb-5">Work</h3>
     <div class="row g-5 mb-5">
       <div class="col-md-2">
-        <h4>Education</h4>
+        <h4>Oral Communications</h4>
       </div>
       <div class="col-md-10">
-        {% for section in site.data.cv.education %}
+        {% for section in site.data.work.oral-communications %}
           <p class="fw-bold">{{ section.title }}</p>
           <p>{{ section.description }}</p>
         {% endfor %}
@@ -20,10 +20,10 @@ layout: default
     </div>
     <div class="row g-5 mb-5">
       <div class="col-md-2">
-        <h4>Academic Experience</h4>
+        <h4>Poster Communications</h4>
       </div>
       <div class="col-md-10">
-        {% for section in site.data.cv.academic-experience %}
+        {% for section in site.data.work.poster-communications %}
           <p class="fw-bold">{{ section.title }}</p>
           <p>{{ section.description }}</p>
         {% endfor %}
