--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,3 +12,17 @@ body {
 body a {
   color: $linkColor
 }
+
+@media (max-width: 576px) {
+  header .d-flex {
+    flex-direction: column !important;
+    align-items: flex-start !important;
+    text-align: left !important;
+  }
+  header .fs-4,
+  header span {
+    text-align: center !important;
+    width: 100%;
+    display: block;
+  }
+}
